--- a/css/style.css
+++ b/css/style.css
@@ -1,61 +1,66 @@
-/* Centered Navigation List at the Top */
-nav {
+#main-navbar {
   background-color: blue;
   overflow: hidden;
+}
+
+#navbar-container {
+  float: left;
   width: 100%;
   position: relative;
+}
+
+#main-navbar ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  position: relative;
+  left: 50%;
+  float: left;
 }
 
-nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  text-align: center;
+#main-navbar ul li {
+  float: left;
+  position: relative;
+  right: 50%;
+  display: block;
 }
 
-nav ul li {
-  display: inline-block;
-}
-
-nav ul li a {
-  padding: 10px 20px;
-  color: #fff;
-  text-decoration: none;
-  background-color: #000;
-  text-decoration: underline overline;
-  display: inline-block;
-}
-
-/* Side Navigation Bar on the Right */
-aside {
-  position: fixed;
-  right: 0;
-  top: 0;
-  background-color: red;
-  width: 20%;
-  height: 100%;
-  list-style-type: none;
-  text-align: center;
-  padding: 0;
-}
-
-aside ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-aside ul li {
-  padding: 15px 0;
-}
-
-aside ul li a {
-  color: #fff;
-  text-decoration: none;
-  background-color: #000;
+#main-navbar ul li a {
   display: block;
   padding: 10px 20px;
+  color: #fff;
+  text-decoration: none;
+}
+
+#main-navbar ul li a:hover {
+  background-color: #000;
+}
+
+#onpage {
+  text-decoration: underline overline;
+}
+
+#sidebar {
+  position: fixed;
+  right:0%;
+  background-color: red;
+  height: 100%;
+  width: 20%;
+}
+
+#sidebar ul {
+  list-style-type: none;
+  text-align: center;
+  padding: 0;
+}
+
+#sidebar ul li a {
+  display: block;
+  padding: 15px 0;
+  color: #fff;
+  text-decoration: none;
+}
+
+#sidebar ul li a:hover {
+  background-color: #000;
 }
