--- a/css/style.css
+++ b/css/style.css
@@ -1,32 +1,28 @@
+/* Navbar Styles */
 #main-navbar {
   background-color: blue;
   overflow: hidden;
 }
 
 #navbar-container {
-  float: left;
+  display: flex;
+  justify-content: center;
   width: 100%;
-  position: relative;
 }
 
 #main-navbar ul {
-  list-style-type: none;
-  margin: 0;
+  display: flex;
   padding: 0;
-  position: relative;
-  left: 50%;
-  float: left;
+  margin: 0;
+  list-style: none;
 }
 
 #main-navbar ul li {
-  float: left;
-  position: relative;
-  right: 50%;
-  display: block;
+  display: inline-block;
 }
 
 #main-navbar ul li a {
-  display: block;
+  display: inline-block;
   padding: 10px 20px;
   color: #fff;
   text-decoration: none;
@@ -40,18 +36,25 @@
   text-decoration: underline overline;
 }
 
+/* Sidebar Styles */
 #sidebar {
   position: fixed;
-  right:0%;
+  top: 0;
+  right: 0;
   background-color: red;
   height: 100%;
   width: 20%;
 }
 
 #sidebar ul {
-  list-style-type: none;
-  text-align: center;
   padding: 0;
+  margin: 0;
+  list-style: none;
+  text-align: center;
+}
+
+#sidebar ul li {
+  display: block;
 }
 
 #sidebar ul li a {
