--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,32 @@
-/* Navbar Styles */
 #main-navbar {
   background-color: blue;
   overflow: hidden;
 }
 
 #navbar-container {
-  display: flex;
-  justify-content: center;
+  float: left;
   width: 100%;
+  position: relative;
 }
 
 #main-navbar ul {
-  display: flex;
-  padding: 0;
+  list-style-type: none;
   margin: 0;
-  list-style: none;
+  padding: 0;
+  position: relative;
+  left: 50%;
+  float: left;
 }
 
 #main-navbar ul li {
-  display: inline-block;
+  float: left;
+  position: relative;
+  right: 50%;
+  display: block;
 }
 
 #main-navbar ul li a {
-  display: inline-block;
+  display: block;
   padding: 10px 20px;
   color: #fff;
   text-decoration: none;
@@ -36,25 +40,18 @@
   text-decoration: underline overline;
 }
 
-/* Sidebar Styles */
 #sidebar {
   position: fixed;
-  top: 0;
-  right: 0;
+  right:0%;
   background-color: red;
   height: 100%;
   width: 20%;
 }
 
 #sidebar ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
+  list-style-type: none;
   text-align: center;
-}
-
-#sidebar ul li {
-  display: block;
+  padding: 0;
 }
 
 #sidebar ul li a {
